--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer {% if site.scrollappear_enabled %}scrollappear{% endif %}">
   <p>
-    Built with Jekyll and <a href="https://github.com/nielsenramon/chalk" rel="noreferrer noopener" target="_blank" title="Download Chalk">Chalk</a> theme.
+    Built with <a href="https://jekyllrb.com/" rel="noreferrer noopener" target="_blank" title="Download Chalk">Jekyll</a> and <a href="https://github.com/nielsenramon/chalk" rel="noreferrer noopener" target="_blank" title="Download Chalk">Chalk</a> theme.
   </p>
 </footer>
